## Makefile.am for qingy/media/default

defaultthemedatadir = $(prefix)/etc/qingy/default

defaultthemedata_DATA = \
	theme                 \
	decker.ttf            \
	background.png        \
	power_normal.png      \
	power_mouseover.png   \
	reset_normal.png      \
	reset_mouseover.png

EXTRA_DIST =  $(defaultthemedata_DATA)
