## Makefile.am for qingy/media/default

defaultthemedatadir = $(prefix)/etc/qingy/themes/default

defaultthemedata_DATA =       \
	theme                       \
	decker.ttf                  \
	background.png              \
	power_normal.png            \
	power_mouseover.png         \
	reset_normal.png            \
	reset_mouseover.png         \
	sleep_normal.png            \
	sleep_mouseover.png         \
	screensaver_normal.png      \
	screensaver_mouseover.png


EXTRA_DIST =  $(defaultthemedata_DATA)
