## Makefile.am for qingy/media/default

defaultthemedatadir = $(prefix)@THEMES_DIR@/default

dist_defaultthemedata_DATA =  \
	theme                       \
	decker.ttf                  \
	background.jpg              \
	power_normal.png            \
	power_mouseover.png         \
	reset_normal.png            \
	reset_mouseover.png         \
	sleep_normal.png            \
	sleep_mouseover.png         \
	screensaver_normal.png      \
	screensaver_mouseover.png
